// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PerfectionProgressBar with current level critical 1`] = `
<div
  class="PerfectionProgressBar"
>
  <div
    class="PerfectionProgressBar-Line"
    style="--current-width:0.33;--width-level-critical:0.33;--width-level-warning:0.33;--width-level-ok:0.34"
  >
    <div
      class="PerfectionProgressBar-CurrentPosition PerfectionProgressBar-CurrentPosition_critical"
    >
      <span>
        33%
      </span>
    </div>
    <div
      class="PerfectionProgressBar-Block"
    >
      <div
        class="PerfectionProgressBar-Block PerfectionProgressBar-Block_critical PerfectionProgressBar-Block_first"
      />
      <div
        class="PerfectionProgressBar-Weight"
      >
        0%
      </div>
    </div>
    <div
      class="PerfectionProgressBar-Block"
    >
      <div
        class="PerfectionProgressBar-Block PerfectionProgressBar-Block_warning"
      />
      <div
        class="PerfectionProgressBar-Weight PerfectionProgressBar-Weight_middle"
      >
        33%
      </div>
    </div>
    <div
      class="PerfectionProgressBar-Block"
    >
      <div
        class="PerfectionProgressBar-Block PerfectionProgressBar-Block_ok PerfectionProgressBar-Block_last"
      />
      <div
        class="PerfectionProgressBar-Weight PerfectionProgressBar-Weight_middle"
      >
        66%
      </div>
      <div
        class="PerfectionProgressBar-Weight PerfectionProgressBar-Weight_right"
      >
        100%
      </div>
    </div>
  </div>
</div>
`;

exports[`PerfectionProgressBar with current level ok 1`] = `
<div
  class="PerfectionProgressBar"
>
  <div
    class="PerfectionProgressBar-Line"
    style="--current-width:0.75;--width-level-critical:0.33;--width-level-warning:0.33;--width-level-ok:0.34"
  >
    <div
      class="PerfectionProgressBar-CurrentPosition PerfectionProgressBar-CurrentPosition_ok"
    >
      <span>
        75%
      </span>
    </div>
    <div
      class="PerfectionProgressBar-Block"
    >
      <div
        class="PerfectionProgressBar-Block PerfectionProgressBar-Block_critical PerfectionProgressBar-Block_first"
      />
      <div
        class="PerfectionProgressBar-Weight"
      >
        0%
      </div>
    </div>
    <div
      class="PerfectionProgressBar-Block"
    >
      <div
        class="PerfectionProgressBar-Block PerfectionProgressBar-Block_warning"
      />
      <div
        class="PerfectionProgressBar-Weight PerfectionProgressBar-Weight_middle"
      >
        33%
      </div>
    </div>
    <div
      class="PerfectionProgressBar-Block"
    >
      <div
        class="PerfectionProgressBar-Block PerfectionProgressBar-Block_ok PerfectionProgressBar-Block_last"
      />
      <div
        class="PerfectionProgressBar-Weight PerfectionProgressBar-Weight_middle"
      >
        66%
      </div>
      <div
        class="PerfectionProgressBar-Weight PerfectionProgressBar-Weight_right"
      >
        100%
      </div>
    </div>
  </div>
</div>
`;

exports[`PerfectionProgressBar with current level warning 1`] = `
<div
  class="PerfectionProgressBar"
>
  <div
    class="PerfectionProgressBar-Line"
    style="--current-width:0.66;--width-level-critical:0.33;--width-level-warning:0.33;--width-level-ok:0.34"
  >
    <div
      class="PerfectionProgressBar-CurrentPosition PerfectionProgressBar-CurrentPosition_warning"
    >
      <span>
        66%
      </span>
    </div>
    <div
      class="PerfectionProgressBar-Block"
    >
      <div
        class="PerfectionProgressBar-Block PerfectionProgressBar-Block_critical PerfectionProgressBar-Block_first"
      />
      <div
        class="PerfectionProgressBar-Weight"
      >
        0%
      </div>
    </div>
    <div
      class="PerfectionProgressBar-Block"
    >
      <div
        class="PerfectionProgressBar-Block PerfectionProgressBar-Block_warning"
      />
      <div
        class="PerfectionProgressBar-Weight PerfectionProgressBar-Weight_middle"
      >
        33%
      </div>
    </div>
    <div
      class="PerfectionProgressBar-Block"
    >
      <div
        class="PerfectionProgressBar-Block PerfectionProgressBar-Block_ok PerfectionProgressBar-Block_last"
      />
      <div
        class="PerfectionProgressBar-Weight PerfectionProgressBar-Weight_middle"
      >
        66%
      </div>
      <div
        class="PerfectionProgressBar-Weight PerfectionProgressBar-Weight_right"
      >
        100%
      </div>
    </div>
  </div>
</div>
`;

exports[`PerfectionProgressBar with two zones critical and warning 1`] = `
<div
  class="PerfectionProgressBar"
>
  <div
    class="PerfectionProgressBar-Line"
    style="--current-width:0.4;--width-level-critical:0.5;--width-level-warning:0.5"
  >
    <div
      class="PerfectionProgressBar-CurrentPosition PerfectionProgressBar-CurrentPosition_critical"
    >
      <span>
        40%
      </span>
    </div>
    <div
      class="PerfectionProgressBar-Block"
    >
      <div
        class="PerfectionProgressBar-Block PerfectionProgressBar-Block_critical PerfectionProgressBar-Block_first"
      />
      <div
        class="PerfectionProgressBar-Weight"
      >
        0%
      </div>
    </div>
    <div
      class="PerfectionProgressBar-Block"
    >
      <div
        class="PerfectionProgressBar-Block PerfectionProgressBar-Block_warning PerfectionProgressBar-Block_last"
      />
      <div
        class="PerfectionProgressBar-Weight PerfectionProgressBar-Weight_middle"
      >
        50%
      </div>
      <div
        class="PerfectionProgressBar-Weight PerfectionProgressBar-Weight_right"
      >
        100%
      </div>
    </div>
  </div>
</div>
`;

exports[`PerfectionProgressBar with two zones warning and ok 1`] = `
<div
  class="PerfectionProgressBar"
>
  <div
    class="PerfectionProgressBar-Line"
    style="--current-width:0.7;--width-level-warning:0.5;--width-level-ok:0.5"
  >
    <div
      class="PerfectionProgressBar-CurrentPosition PerfectionProgressBar-CurrentPosition_ok"
    >
      <span>
        70%
      </span>
    </div>
    <div
      class="PerfectionProgressBar-Block"
    >
      <div
        class="PerfectionProgressBar-Block PerfectionProgressBar-Block_warning PerfectionProgressBar-Block_first"
      />
      <div
        class="PerfectionProgressBar-Weight"
      >
        0%
      </div>
    </div>
    <div
      class="PerfectionProgressBar-Block"
    >
      <div
        class="PerfectionProgressBar-Block PerfectionProgressBar-Block_ok PerfectionProgressBar-Block_last"
      />
      <div
        class="PerfectionProgressBar-Weight PerfectionProgressBar-Weight_middle"
      >
        50%
      </div>
      <div
        class="PerfectionProgressBar-Weight PerfectionProgressBar-Weight_right"
      >
        100%
      </div>
    </div>
  </div>
</div>
`;
